--- a/index.html
+++ b/index.html
@@ -33,12 +33,53 @@
                 <div class="text_ani_box">
                     텍스트 애니메이션 박스입니다.
                 </div>
+                <div class="text_box">
+                    <p class="text">안녕하세요.</p>
+                    <p class="text">신입 웹퍼블리셔</p>
+                    <p class="text">허유진 입니다.</p>
+                </div>
             </div>
         </div>
         <!-- 자기소개 -->
         <div class="about_me section">
             <div class="center">
                 자기소개 영역입니다.
+                <h2 class="title">ABOUT ME</h2>
+                <!-- 기본사항 -->
+                <div class="info">
+                    <p class="name">허유진</p>
+                    <p class="brith">1999.10.27</p>
+
+                </div>
+                <!-- 학력 -->
+                <div>
+                    <p>서영대학교 파주캠퍼스 유아교육과</p>
+                    <p>한국방송통신대학교 컴퓨터과학과(졸업예정)</p>
+                </div>
+                <!-- 경력 -->
+                <div>
+                    <p>CU 식사태하점 2018.01.07 ~ 2019.06.23</p>
+                    <P>CU 일산에듀포레점 2019.09.14 ~ 2020.05.09</P>
+                    <P>CU 강선8단지점 2020.03.21 ~ 2020.10.18</P>
+                    <P>GS25 고양산두로점 2020.03.21 ~ 2022.06.26</P>
+                </div>
+                <!-- 자격증 -->
+                <div class="license">
+                    <p>유치원정교사2급</p>
+                    <p>보육교사2급</p>
+                    <p>동화구연지도사</p>
+                    <p>GTQ 포토샵 1급</p>
+                    <p>GTQ 일러스트 1급</p>
+                    <P>운전면허 2종 보통</P>
+                </div>
+                <!-- 보유스킬 -->
+                <div class="skill">
+                    <p>Html</p>
+                    <p>Css/Scss</p>
+                    <p>Javascript</p>
+                    <p>Ejs</p>
+                    <p>Node.js</p>
+                </div>
             </div>
         </div>
         <!-- 포트폴리오 작업물 나열 -->
@@ -51,9 +92,56 @@
         <div class="portfolio_info section">
             <div class="pf pf1">
                 <div class="left">작업사진</div>
-                <div class="right">상세 설명</div>
+                <!-- 스크롤하면 왼쪽사진만 바뀜 오른쪽 그대로 attached? -->
+                <!-- 다음 포폴 작업도 이전 포폴 설명 다 끝난다음 나오도록하기 -->
+                <div class="right">
+                    <!-- 레이아웃 정하고 정리 -->
+                    <p class="context">
+                        사이트이름 : 동글투어<br>
+                        이름선정이유 : 지구는 동그라미 모양이기 때문에 지구 곳곳의 지역들을 여행할 수 있다는 의미로 동글투어라는 이름을 선정했습니다.<br>
+                        컨셉 : 여행사이트<br>
+                        참고사이트 : 하나투어 / 모두투어<br>
+                        사용한 기술 : html / scss / javascript / ejs / node.js<br>
+                        ● 페이지열람<br>
+                        기본적으로 로그인을 하지 않은 사이트 이용자 모두 페이지를 볼 수 있습니다.<br>
+                        다만, 커뮤니티 페이지는 로그인을 해야 페이지 열람이 가능합니다.<br>
+                        ● 회원가입 기능<br>
+                        - 정규표현식을 사용하여 각 인풋란에 따라 규칙을 다르게 정하였습니다.<br>
+                        - 인풋태그에 공백란이 하나라도 있으면 회원가입이 불가합니다.<br>
+                        - 형식에 맞지 않게 작성한 후 가입하기 버튼을 눌렀을 경우 경고창이 뜨도록 하였습니다.<br>
+                        ● 게시판 기능<br>
+                        - 사이트 회원만 커뮤니티 페이지에서 글쓰기가 가능합니다.(파일첨부O)<br>
+                        - 자신이 작성한 게시글은 수정 및 삭제가 가능합니다.<br>
+                        - 원하는 사람의 게시물에 댓글을 남길 수 있습니다.<br>
+                    </p>
+                </div>
             </div>
-            <div class="pf pf2"></div>
+            <div class="pf pf2">
+                <div class="left">작업사진</div>
+                <!-- 스크롤하면 왼쪽사진만 바뀜 오른쪽 그대로 attached? -->
+                <!-- 다음 포폴 작업도 이전 포폴 설명 다 끝난다음 나오도록하기 -->
+                <div class="right">
+                    <!-- 레이아웃 정하고 정리 -->
+                    <p class="context">
+                        사이트이름 : ANYTHING<br>
+                        이름선정이유 : 의류 의외에도 가구 및 학용품 등을 파는 것을 보고 영감을 받아 ANYTHING이라는 이름을 선정했습니다.<br>
+                        컨셉 : 쇼핑몰사이트<br>
+                        참고사이트 : 무신사 / 엠엘비 / 커버낫 / 예일 / 리<br>
+                        사용한 기술 : html / scss / javascript / ejs / node.js<br>
+                        ● 페이징기법<br>
+                        - 한 페이지당 보여줄 데이터수는 4개이며, 블록당 보여줄 페이징 번호수는 3개입니다.
+                        - 1번/마지막 페이지를 보고 있을 경우 처음/마지막 버튼은 눌리지 않습니다.
+                        - 이전/다음 버튼을 누를 경우 바로 이전/다음 페이지로 넘어갑니다.
+                        - 처음/마지막 버튼을 누를 경우 바로 첫/마지막 페이지로 넘어갑니다.
+                        ● 의류 카테고리<br>
+                        - 
+                        ● 매장검색기능<br>
+                        - 지역선택 부분에서 시/도를 선택하기 전에는 구/군에서 어떠한 지역도 뜨지 않습니다.
+                        - 지역선택 부분에서 아무것도 정하지 않고 검색할 경우 모든 매장리스트가 나오도록 하였습니다.
+                        - 해당 지역에 매장이 없을 경우 '매장 검색 결과가 없습니다.' 라는 문구가 뜨도록 하였습니다.
+                    </p>
+                </div>
+            </div>
             <div class="pf pf3"></div>
         </div>
     </div>
