--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         참고사이트 : 무신사 / 엠엘비 / 커버낫 / 예일 / 리<br>
                         사용한 기술 : html / scss / javascript / ejs / node.js<br>
 
-                        ● header / footer<br>
+                        <i class="fa-solid fa-bookmark"></i> header / footer<br>
                         - ejs를 활용하여 header와 footer를 개별파일로 만들어 각 페이지마다 include 하였습니다.
                         - ejs를 활용하여 main / brand / store 페이지의 header와 footer는 검은색 배경의 하얀 글씨를 주었고, 나머지 페이지는 하얀색 배경의 검은색 글씨를 주었습니다.
                         
