--- a/index.html
+++ b/index.html
@@ -115,13 +115,22 @@
         <div class="portfolio section">
             <div class="pf pf1">
                 <div class="left">
-                    <div class="move_box">
+                    <a href="https://utilitarian-bee-370403.du.r.appspot.com/" target="_blank">
                         <img src="img/pf1-1.png" alt="">
+                    </a>
+                    <div class="hover_bg">
+                        <a class="link"  href="https://utilitarian-bee-370403.du.r.appspot.com/" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                            <p>보러가기</p>
+                        </a>
                     </div>
                 </div>
                 <div class="right">
                     <div class="context">
                         <h2 class="title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">PORTFOLIO 01</h2>
+                        <a class="link"  href="https://utilitarian-bee-370403.du.r.appspot.com/" target="_blank" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                            <i class="fa-solid fa-link"></i>보러가기
+                        </a>
                         <div class="info info1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                             <p><span>사이트이름</span> : 동글투어</p>
                             <p><span>이름선정이유</span> : 지구는 동그라미 모양이기 때문에 지구 곳곳의 지역들을 여행할 수 있다는 의미로 동글투어라는 이름을 선정했습니다.</p>
@@ -162,6 +171,9 @@
                 <div class="right">
                     <div class="context">
                         <h2 class="title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">PORTFOLIO 02</h2>
+                        <a class="link"  href="https://portfolio2-370402.du.r.appspot.com/" target="_blank" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                            <i class="fa-solid fa-link"></i>보러가기
+                        </a>
                         <div class="info info1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                             <p><span>사이트이름</span> : ANYTHING</p>
                             <p><span>이름선정이유</span> : 의류 의외에도 가구 및 학용품 등을 파는 것을 보고 영감을 받아 ANYTHING이라는 이름을 선정했습니다.</p>
@@ -206,23 +218,36 @@
                     </div>
                 </div>
                 <div class="left">
-                    <div class="move_box">
+                    <a href="https://portfolio2-370402.du.r.appspot.com/" target="_blank">
                         <img src="img/pf2-1.png" alt="">
+                    </a>
+                    <div class="hover_bg">
+                        <a class="link"  href="https://portfolio2-370402.du.r.appspot.com/" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                            <p>보러가기</p>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="pf pf3">
                 <div class="left">
-                    <div class="move_box">
+                    <a href="https://aerial-summit-370705.du.r.appspot.com/" target="_blank">    
                         <img src="img/pf3-1.png" alt="">
                         <img src="img/pf3-11.png" alt="">
+                    </a>
+                    <div class="hover_bg">
+                        <a class="link"  href="https://aerial-summit-370705.du.r.appspot.com/" target="_blank">
+                            <i class="fa-solid fa-link"></i>
+                            <p>보러가기</p>
+                        </a>
                     </div>
                 </div>
-                <!-- 스크롤하면 왼쪽사진만 바뀜 오른쪽 그대로 attachment ? -->
-                <!-- 다음 포폴 작업도 이전 포폴 설명 다 끝난다음 나오도록하기 -->
                 <div class="right">
                     <div class="context">
                         <h2 class="title" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">PORTFOLIO 03</h2>
+                        <a class="link"  href="https://aerial-summit-370705.du.r.appspot.com/" target="_blank" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
+                            <i class="fa-solid fa-link"></i>보러가기
+                        </a>
                         <div class="info info1" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                             <p><span>사이트이름</span> : Paypal</p>
                             <!-- <p>이름선정이유 :</p> -->
@@ -279,9 +304,9 @@
                     <p>010.9866.4543</p>
                 </div>
             </div>
-            <!-- <div class="f_bot">
-                감사합니다.
-            </div> -->
+            <div class="f_bot">
+                끝까지 봐주셔서 감사합니다.
+            </div>
         </div>
     </div>
     <!-- js -->
@@ -292,15 +317,5 @@
     <script>
         AOS.init();
     </script>
-    <!-- <script src="js/rolling.js"></script> -->
 </body>
 </html>
-
-<!-- 집에가서 해야할 것 -->
-<!-- 
-    1. 텍스트 애니메이션
-    2. 레이아웃 정해오기
-    3. attachment 
-    5. 답없으면 마우스 올렸을 때 이미지 롤링 / 내렸을 때 롤링x
-    6. pc일러스트에 홈페이지 사진 클리핑마스크
- -->
