--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     <div id="container">
         <!-- 인트로 화면 -->
         <div class="intro section">
-            <div class="bg">
-                <img src="img/test2.jpg" alt="">
+            <!-- <div class="bg">
+                <img src="img/test33.jpg" alt="">
                 <div class="black"></div>
-            </div>
+            </div> -->
+            <div class="border"></div>
             <div class="center">
                 <div class="text_ani_box">
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 779.64 160.27">
@@ -45,9 +46,9 @@
                 </div>
                 <div class="text_box">
                     <p class="text" data-aos="fade-up" data-aos-duration="700" data-aos-delay="2500">안녕하세요.</p>
-                    <p class="text" data-aos="fade-up" data-aos-duration="700" data-aos-delay="2800"><span>성장중</span>인 신입 웹퍼블리셔</p>
+                    <p class="text" data-aos="fade-up" data-aos-duration="700" data-aos-delay="2800"><span class="line"><span>성장중</span></span> 인 신입 웹퍼블리셔</p>
                     <!-- <p class="text">신입 웹퍼블리셔</p> -->
-                    <p class="text" data-aos="fade-up" data-aos-duration="700" data-aos-delay="3000"><span>허유진</span> 입니다.</p>
+                    <p class="text" data-aos="fade-up" data-aos-duration="700" data-aos-delay="3000"><span class="line"><span>허유진</span></span> 입니다.</p>
                 </div>
             </div>
         </div>
@@ -110,7 +111,8 @@
                         <p>· Javascript</p>
                         <p>· Node.js</p>
                         <p>· React</p>
-                        <p>· mongoDB</p>
+                        <p>· MongoDB</p>
+                        <p>· Git</p>
                     </div>
                 </div>  
             </div>
