--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
                         <p class="tell">· 번호 : 010.9866.4543</p>
                     </div>
                     <!-- 나를 표현하는 문장 -->
-                    <div class="sentence">
-                        <p>나를 표현하는 문장</p>
+                    <div class="sentence" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
+                        <p class="t_text">변화에 따라 움직이는 개발자입니다.</p>
+                        <p class="b_text">
+                            현재에 머물러 있기보다 업그레이드 되는 기술을 계속해서 배우고<br>
+                            임팩트 있으면서 가독성이 좋은 사이트를 만들고 싶습니다.
+                        </p>
                     </div>
                 </div>
                 <div class="bottom" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1000">
@@ -93,10 +97,10 @@
                                 <p>· 한국방송통신대학교 컴퓨터과학과(졸업예정)</p>
                             </div>
                             <div class="right">
-                                <p>2015.03.00 ~ 2018.02.00</p>
-                                <p>2018.03.00 ~ 2021.02.00</p>
+                                <p>2015.03.02 ~ 2018.02.21</p>
+                                <p>2018.03.02 ~ 2021.02.21</p>
                                 <p>2022.06.30 ~ 2022.12.20</p>
-                                <p>2021.03.00 ~ 2023.02.00</p>
+                                <p>2021.03.02 ~ 2023.02.21</p>
                             </div>
                         </div>
                     </div>
